--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -84,6 +84,13 @@ $(document).ready(function() {
         }
     });
 
+    if ( $('#clubs-tab').length ) {
+        $('#clubs-tab-link').on('click', function() {
+            $('#clubs-tab').text(_("Loading..."));
+            $('#clubs-tab').load('/cgi-bin/koha/clubs/patron-clubs-tab.pl?borrowernumber=[% borrowernumber %]');
+        });
+    }
+
     [% IF !( CircAutoPrintQuickSlip == 'clear' ) %]
         // listen submit to trigger qslip on empty checkout
         $('#mainform').bind('submit',function() {
@@ -839,6 +846,16 @@ No patron matched <span class="ex">[% message %]</span>
         [% END %]
     </li>
 
+    [% SET enrollments = borrower.GetClubEnrollmentsCount %]
+    [% SET enrollable  = borrower.GetEnrollableClubsCount %]
+    [% IF CAN_user_clubs && ( enrollable || enrollments ) %]
+        <li>
+            <a id="clubs-tab-link" href="#clubs-tab">
+                Clubs ([% enrollments %]/[% enrollable %])
+            </a>
+        </li>
+    [% END %]
+
     [% IF relatives_issues_count %]
         <li><a id="relatives-issues-tab" href="#relatives-issues">Relatives' checkouts</a></li>
     [% END %]
@@ -877,6 +894,12 @@ No patron matched <span class="ex">[% message %]</span>
                 </tr>
             </thead>
         </table>
+    </div>
+[% END %]
+
+[% IF CAN_user_clubs %]
+    <div id="clubs-tab">
+        Loading...
     </div>
 [% END %]
 
