--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
@@ -46,6 +46,13 @@ var MSG_EXPORT_SELECT_CHECKOUTS = _("You must select checkout(s) to export");
 columns_settings = [% ColumnsSettings.GetColumns( 'member', 'moremember', 'issues-table', 'json' ) %]
 
 $(document).ready(function() {
+    if ( $('#clubs-tab').length ) {
+        $('#clubs-tab-link').on('click', function() {
+            $('#clubs-tab').text(_("Loading..."));
+            $('#clubs-tab').load('/cgi-bin/koha/clubs/patron-clubs-tab.pl?borrowernumber=[% borrowernumber %]');
+        });
+    }
+
     $('#finesholdsissues').tabs({
         // Correct table sizing for tables hidden in tabs
         // http://www.datatables.net/examples/api/tabs_and_scrolling.html
@@ -435,6 +442,15 @@ function validate1(date) {
             [% END %]
         </li>
         <li><a id="debarments-tab-link" href="#reldebarments">[% debarments.size %] Restrictions</a></li>
+        [% SET enrollments = borrower.GetClubEnrollmentsCount %]
+        [% SET enrollable  = borrower.GetEnrollableClubsCount %]
+        [% IF CAN_user_clubs && ( enrollments || enrollable ) %]
+            <li>
+                <a id="clubs-tab-link" href="#clubs-tab">
+                    Clubs ([% enrollments %]/[% enrollable %])
+                </a>
+            </li>
+        [% END %]
     </ul>
 
 [% INCLUDE "checkouts-table.inc" %]
@@ -469,6 +485,12 @@ function validate1(date) {
         <p>No outstanding charges</p>
     [% END %]
 </div>
+
+[% IF CAN_user_clubs && ( enrollments || enrollable ) %]
+    <div id="clubs-tab">
+        Loading...
+    </div>
+[% END %]
 
 [% INCLUDE borrower_debarments.inc %]
 
