--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -897,9 +897,8 @@ No patron matched <span class="ex">[% message %]</span>
     </div>
 [% END %]
 
-[% IF CAN_user_clubs %]
+[% IF CAN_user_clubs && ( enrollable || enrollments ) %]
     <div id="clubs-tab">
-        Loading...
     </div>
 [% END %]
 
