--- a/koha-tmpl/intranet-tmpl/prog/en/modules/about.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/about.tt
@@ -758,6 +758,9 @@
 
             <h2>Require.js JS module system</h2>
             <p>The <a href="http://requirejs.org/">Require.js JS module system</a> by The Dojo Foundation is licensed under an <a href="https://github.com/jrburke/requirejs/blob/master/LICENSE">MIT license</a>.</p>
+
+            <h2>TreeGrid jQuery plugin</h2>
+            <p>The <a href="http://maxazan.github.io/jquery-treegrid/">TreeGrid jQuery plugin</a> by Maksym Pomazan is licensed under an <a href="https://github.com/jrburke/requirejs/blob/master/LICENSE">MIT license</a>.</p>
         </div>
 
         <div id="translations">
